--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     </head>
 
     <body>
-   		<h1> Just A Test </h1>
+      <h1> Just A Test </h1>
 
-   		<button type="button" id="ajax">Ajax</button>
-   		<button type="button">Ajax-Promise</button>
+      <button type="button" id="ajax">Ajax</button>
+      <button type="button" id="ajax-defer">Ajax-Defer</button>
+      <button type="button">Ajax-Promise</button>
 
-   		<button type="button">Ajax-Fiber</button>
-   		<button type="button">Ajax-Coroutine</button>
-   	
-   		<button type="button">RPC</button>
+      <button type="button">Ajax-Fiber</button>
+      <button type="button">Ajax-Coroutine</button>
+    
+      <button type="button">RPC</button>
 
-   		<br><br><br>
-   		<div id="content"> </div>
+      <br><br><br>
+      <div id="content"> </div>
     </body>
 
     <script type="text/javascript" src="ajax.js"> </script>
