--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 
       <button type="button" id="ajax">Ajax</button>
       <button type="button" id="ajax-defer">Ajax-Defer</button>
-      <button type="button">Ajax-Promise</button>
+      <button type="button" id="ajax-promise">Ajax-Promise</button>
 
       <button type="button">Ajax-Fiber</button>
       <button type="button">Ajax-Coroutine</button>
-    
-      <button type="button">RPC</button>
+      <button type="button">Ajax-RPC</button>
 
       <br><br><br>
       <div id="content"> </div>
@@ -22,4 +21,5 @@
 
     <script type="text/javascript" src="ajax.js"> </script>
     <script type="text/javascript" src="ajax-defer.js"> </script>
+    <script type="text/javascript" src="ajax-promise.js"> </script>
 </html>
